Updated for current tools.
Updated to use wxWidgets 2.8 with GTK2.
Updated to use latest boost libraries.
Updated for compatibility with Python 2.7

--- a/NE/HyperNEAT/GoPlayer/CMakeLists.txt
+++ b/NE/HyperNEAT/GoPlayer/CMakeLists.txt
@@ -43,7 +43,8 @@ ELSE(CYGWIN)
 		ELSE(APPLE)
 		ADD_DEFINITIONS(
 			-DTIXML_USE_STL
-			-D__WXGTK__
+            -D__WXGTK__
+            -D__WXGTK20__
 			-DWXUSINGDLL
 			-DNOPCH
 			-D_USE_MATH_DEFINES
