--- a/NE/HyperNEAT/Hypercube_NEAT/CMakeLists.txt
+++ b/NE/HyperNEAT/Hypercube_NEAT/CMakeLists.txt
@@ -177,6 +177,15 @@ ELSE(CYGWIN)
 	ENDIF(WIN32)
 ENDIF(CYGWIN)
 
+SET(
+    NEAT_DEFORMS_PATH
+    "${CMAKE_SOURCE_DIR}/../../../../src/hyperneat"
+    CACHE
+    PATH
+    "Directory of C++ additions in Neat-Deforms project."
+    FORCE
+)
+
 INCLUDE_DIRECTORIES(
 	include
 	../NEAT/include
@@ -198,6 +207,7 @@ INCLUDE_DIRECTORIES(
 	${FUEGO_INCLUDE}/gtpengine
 	${FUEGO_INCLUDE}/simpleplayers
 	${FUEGO_INCLUDE}/smartgame
+    ${NEAT_DEFORMS_PATH}
 	)
 IF(WIN32)
 INCLUDE_DIRECTORIES(
@@ -324,37 +334,39 @@ ADD_LIBRARY(
 	src/HCUBE_NeuralNetworkWeightGrid.cpp
 
 	src/Experiments/HCUBE_XorExperiment.cpp
-	src/Experiments/HCUBE_XorCoExperiment.cpp
-	src/Experiments/HCUBE_CheckersCommon.cpp
-	src/Experiments/HCUBE_GoExperiment.cpp
-	src/Experiments/HCUBE_CheckersExperiment.cpp
-	src/Experiments/HCUBE_CheckersExperimentPruning.cpp
-	src/Experiments/HCUBE_CheckersExperimentFogel.cpp
-	src/Experiments/HCUBE_CheckersExperimentOriginalFogel.cpp
-	src/Experiments/HCUBE_CheckersScalingExperiment.cpp
-	src/Experiments/HCUBE_ChessExperiment.cpp
-	src/Experiments/HCUBE_OthelloCommon.cpp
-	src/Experiments/HCUBE_OthelloExperiment.cpp
-	src/Experiments/HCUBE_OthelloCoExperiment.cpp
-	src/Experiments/HCUBE_CoCheckersExperiment.cpp
-	src/Experiments/HCUBE_CheckersExperimentNoGeom.cpp
-	src/Experiments/HCUBE_CheckersExperimentSubstrateGeom.cpp
-	src/Experiments/HCUBE_FindClusterExperiment.cpp
-	src/Experiments/HCUBE_FindClusterBPExperiment.cpp
-	src/Experiments/HCUBE_FindClusterNoGeomExperiment.cpp
-	src/Experiments/HCUBE_FindPointExperiment.cpp
-	src/Experiments/HCUBE_RobotArmExperiment.cpp
-	src/Experiments/HCUBE_RobotArmLatticeExperiment.cpp
-	src/Experiments/HCUBE_SimpleImageExperiment.cpp
-	src/Experiments/HCUBE_SpatialExperiment.cpp
-	src/Experiments/HCUBE_SpatialCasinoExperiment.cpp
-	src/Experiments/HCUBE_TicTacToeExperiment.cpp
-	src/Experiments/HCUBE_TicTacToeGameExperiment.cpp
-	src/Experiments/HCUBE_TicTacToeGameNoGeomExperiment.cpp
-	src/Experiments/HCUBE_TicTacToeGameTreeSearch.cpp
-	src/Experiments/HCUBE_ImageCompressionExperiment.cpp
-	src/Experiments/HCUBE_BinaryCompressionExperiment.cpp
-	src/Experiments/HCUBE_LogicBuilderExperiment.cpp
+    src/Experiments/HCUBE_XorCoExperiment.cpp
+    src/Experiments/HCUBE_CheckersCommon.cpp
+    src/Experiments/HCUBE_GoExperiment.cpp
+    src/Experiments/HCUBE_CheckersExperiment.cpp
+    src/Experiments/HCUBE_CheckersExperimentPruning.cpp
+    src/Experiments/HCUBE_CheckersExperimentFogel.cpp
+    src/Experiments/HCUBE_CheckersExperimentOriginalFogel.cpp
+    src/Experiments/HCUBE_CheckersScalingExperiment.cpp
+    src/Experiments/HCUBE_ChessExperiment.cpp
+    src/Experiments/HCUBE_OthelloCommon.cpp
+    src/Experiments/HCUBE_OthelloExperiment.cpp
+    src/Experiments/HCUBE_OthelloCoExperiment.cpp
+    src/Experiments/HCUBE_CoCheckersExperiment.cpp
+    src/Experiments/HCUBE_CheckersExperimentNoGeom.cpp
+    src/Experiments/HCUBE_CheckersExperimentSubstrateGeom.cpp
+    src/Experiments/HCUBE_FindClusterExperiment.cpp
+    src/Experiments/HCUBE_FindClusterBPExperiment.cpp
+    src/Experiments/HCUBE_FindClusterNoGeomExperiment.cpp
+    src/Experiments/HCUBE_FindPointExperiment.cpp
+    src/Experiments/HCUBE_RobotArmExperiment.cpp
+    src/Experiments/HCUBE_RobotArmLatticeExperiment.cpp
+    src/Experiments/HCUBE_SimpleImageExperiment.cpp
+    src/Experiments/HCUBE_SpatialExperiment.cpp
+    src/Experiments/HCUBE_SpatialCasinoExperiment.cpp
+    src/Experiments/HCUBE_TicTacToeExperiment.cpp
+    src/Experiments/HCUBE_TicTacToeGameExperiment.cpp
+    src/Experiments/HCUBE_TicTacToeGameNoGeomExperiment.cpp
+    src/Experiments/HCUBE_TicTacToeGameTreeSearch.cpp
+    src/Experiments/HCUBE_ImageCompressionExperiment.cpp
+    src/Experiments/HCUBE_BinaryCompressionExperiment.cpp
+    src/Experiments/HCUBE_LogicBuilderExperiment.cpp
+
+    ${NEAT_DEFORMS_PATH}/xor3par/HCUBE_Xor3ParExperiment.cpp
 
 	include/HCUBE_Boost.h
 	include/HCUBE_Defines.h
@@ -407,6 +419,8 @@ ADD_LIBRARY(
 	include/Experiments/HCUBE_ImageCompressionExperiment.h
 	include/Experiments/HCUBE_BinaryCompressionExperiment.h
 	include/Experiments/HCUBE_LogicBuilderExperiment.h
+    
+    ${NEAT_DEFORMS_PATH}/xor3par/HCUBE_Xor3ParExperiment.h
 	)
 
 use_precompiled_header(
