--- a/NE/HyperNEAT/CMakeLists.txt
+++ b/NE/HyperNEAT/CMakeLists.txt
@@ -111,9 +111,9 @@ IF(BUILD_GPU)
 ENDIF(BUILD_GPU)
 
 #subdirs(cake-1.20)
-subdirs(cake_fixeddepth)
+#subdirs(cake_fixeddepth)
 subdirs(cliche-1.2 NEAT Hypercube_NEAT)
-subdirs(GoPlayer)
+#subdirs(GoPlayer)
 
 IF(BUILD_PYTHON)
 subdirs(PyHyperNEAT)
