--- a/NE/HyperNEAT/PyHyperNEAT/CMakeLists.txt
+++ b/NE/HyperNEAT/PyHyperNEAT/CMakeLists.txt
@@ -201,28 +201,28 @@ Hypercube_NEAT_Base
 	board
 
 	debug
-	${BOOST_LIB_PREFIX_NAME}boost_thread-${BOOST_LIB_EXT_NAME_DEBUG}
+	${BOOST_LIB_PREFIX_NAME}boost_thread
 
 	optimized
-	${BOOST_LIB_PREFIX_NAME}boost_thread-${BOOST_LIB_EXT_NAME_RELEASE}
+	${BOOST_LIB_PREFIX_NAME}boost_thread
 
     debug
-    ${BOOST_LIB_PREFIX_NAME}boost_python-${BOOST_LIB_EXT_NAME_DEBUG}
+    ${BOOST_LIB_PREFIX_NAME}boost_python
 
     optimized
-    ${BOOST_LIB_PREFIX_NAME}boost_python-${BOOST_LIB_EXT_NAME_RELEASE}
+    ${BOOST_LIB_PREFIX_NAME}boost_python
 
     debug
-    ${BOOST_LIB_PREFIX_NAME}boost_filesystem-${BOOST_LIB_EXT_NAME_DEBUG}
+    ${BOOST_LIB_PREFIX_NAME}boost_filesystem
 
     optimized
-    ${BOOST_LIB_PREFIX_NAME}boost_filesystem-${BOOST_LIB_EXT_NAME_RELEASE}
+    ${BOOST_LIB_PREFIX_NAME}boost_filesystem
 
     debug
-    ${BOOST_LIB_PREFIX_NAME}boost_system-${BOOST_LIB_EXT_NAME_DEBUG}
+    ${BOOST_LIB_PREFIX_NAME}boost_system
 
     optimized
-    ${BOOST_LIB_PREFIX_NAME}boost_system-${BOOST_LIB_EXT_NAME_RELEASE}
+    ${BOOST_LIB_PREFIX_NAME}boost_system
 )
 
 IF(USE_GUI)
@@ -231,22 +231,10 @@ IF(USE_GUI)
 			PyHyperNEAT
 
 			debug
-			wx_based-2.8
+			wx_gtk2-2.8
 
 			optimized
-			wx_base-2.8
-
-			debug
-			wx_mswd_core-2.8
-
-			optimized
-			wx_msw_core-2.8
-
-			debug
-			wx_mswd_adv-2.8
-
-			optimized
-			wx_msw_adv-2.8
+			wx_gtk2-2.8
 			)
 	ELSE(CYGWIN)
 		IF(WIN32)
@@ -280,56 +268,20 @@ IF(USE_GUI)
 				"-framework Carbon"
 		
 				debug
-				wx_macud_adv-2.8
+				wx_gtk2-2.8
 
 				optimized
-				wx_macu_adv-2.8
-
-				debug
-				wx_macud_aui-2.8
-
-				optimized
-				wx_macu_aui-2.8
-
-				debug
-				wx_macud_qa-2.8
-
-				optimized
-				wx_macu_qa-2.8
-
-				debug
-				wx_macud_core-2.8
-
-				optimized
-				wx_macu_core-2.8
-
-				debug
-				wx_base_carbonud-2.8
-
-				optimized
-				wx_base_carbonu-2.8
+				wx_gtk2-2.8
 				)
 			ELSE(APPLE)
 			TARGET_LINK_LIBRARIES(
 				PyHyperNEAT 
 
 				debug
-				wx_baseud-2.8
+				wx_gtk2-2.8
 
 				optimized
-				wx_baseu-2.8
-
-				debug
-				wx_gtk2ud_core-2.8
-
-				optimized
-				wx_gtk2u_core-2.8
-
-				debug
-				wx_gtk2ud_adv-2.8
-
-				optimized
-				wx_gtk2u_adv-2.8
+				wx_gtk2-2.8
 				)
 			ENDIF(APPLE)
 		ENDIF(WIN32)
